fix: lang select > arabic right aligned

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,6 +89,14 @@ body {
     align-items: center;
     flex-direction: column;
 
+    select{
+      padding: 5px 10px;
+      text-indent: 5px;
+      box-sizing: content-box;
+      width: 74px;
+      margin: 20px 10px;
+    }
+
     h1 {
       margin: 0;
       font-size: 18px;
